WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190277
MutationRecord doesn't keep JS wrappers of target, addedNodes, and removedNodes alive
https://bugs.webkit.org/show_bug.cgi?id=190277
Summary
MutationRecord doesn't keep JS wrappers of target, addedNodes, and removedNod...
Ryosuke Niwa
Reported
2018-10-03 23:44:47 PDT
We need to make MutationRecord keep its nodes' JS wrappers alive.
Attachments
Fixes the bug
(17.38 KB, patch)
2018-10-03 23:57 PDT
,
Ryosuke Niwa
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-10-03 23:46:21 PDT
<
rdar://problem/45000115
>
Ryosuke Niwa
Comment 2
2018-10-03 23:57:13 PDT
Created
attachment 351590
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2018-10-04 14:12:07 PDT
Committed
r236850
: <
https://trac.webkit.org/changeset/236850
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug