MutationRecord doesn't keep JS wrappers of target, addedNodes, and removedNodes alive https://bugs.webkit.org/show_bug.cgi?id=190277

Reviewed by Antti Koivisto.

Source/WebCore:

The bug was caused by JSMutationRecord not visiting any of the nodes referenced by mutation records.

Fixed the bug by adding JSMutationRecord::visitAdditionalChildren, which adds the root nodes of
the root nodes of the target, addedNodes, and removedNodes in each mutation record.

Test: fast/dom/MutationObserver/mutation-record-keeps-js-wrappers-of-nodes-alive.html

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSMutationRecordCustom.cpp: Added.
(WebCore::JSMutationRecord::visitAdditionalChildren): Added.
* bindings/js/JSPerformanceObserverCustom.cpp: This file got dumped out of a unified build file
where using namespace JSC was defined. Use the fully qualified names to refer to JSC types.
(WebCore::JSPerformanceObserverOwner::isReachableFromOpaqueRoots):
* dom/MutationRecord.cpp:
(WebCore::ChildListRecord::visitNodesConcurrently): Added.
(WebCore::RecordWithEmptyNodeLists::visitNodesConcurrently): Added.
(WebCore::MutationRecordWithNullOldValue::visitNodesConcurrently): Added.
* dom/MutationRecord.h:
* dom/MutationRecord.idl:

LayoutTests:

Added two regression tests for making sure mutation observers and mutation records keep JS wrappers
of the enqueued nodes alive. Also see r236799 for a previous failed attempt to add a similar test.

* fast/dom/MutationObserver/mutation-observer-keeps-js-wrappers-of-nodes-alive-expected.txt: Added.
* fast/dom/MutationObserver/mutation-observer-keeps-js-wrappers-of-nodes-alive.html: Added.
* fast/dom/MutationObserver/mutation-record-keeps-js-wrappers-of-nodes-alive-expected.txt: Added.
* fast/dom/MutationObserver/mutation-record-keeps-js-wrappers-of-nodes-alive.html: Added.


Canonical link: https://commits.webkit.org/205246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236850 268f45cc-cd09-0410-ab3c-d52691b4dbfc